Fixed spacing between Help sections, fixed Help headers (h2 -> h3, h3 -> h4), fixed spelling bits

--- a/fedoraproject.org/static/css/fedora960.css
+++ b/fedoraproject.org/static/css/fedora960.css
@@ -368,7 +368,7 @@ background-image: -webkit-gradient(radial, 30% 30%, 0, 30% 30%, 900, from(#3C6EB
 ----------------------------------------------- */
 
 .num {
-margin-top: 15px;
+margin-top: 1px;
 }
 
 #web-quotes {
@@ -469,6 +469,11 @@ h4.main-section-hl { font-size: small; }
 
 .bugs-section h2 { margin-top: auto; }
 .bugs-section a { font-weight: normal; }
+
+.step-section {
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
 
 .interactive-section {
     background-color: #E2E2E2;
